--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ cupshelpers==1.0
 defer==1.0.6
 distro-info===0.18ubuntu0.18.04.1
 Flask==1.1.1
+Flask-JWT==0.3.2
 Flask-RESTful==0.3.7
 httplib2==0.9.2
 idna==2.6
@@ -37,6 +38,7 @@ pycairo==1.16.2
 pycrypto==2.6.1
 pycups==1.9.73
 pygobject==3.26.1
+PyJWT==1.4.2
 pymacaroons==0.13.0
 PyNaCl==1.1.2
 pyRFC3339==1.0
@@ -60,6 +62,7 @@ ufw==0.36
 unattended-upgrades==0.1
 urllib3==1.22
 usb-creator==0.3.3
+uWSGI==2.0.18
 virtualenv==16.7.5
 wadllib==1.3.2
 Werkzeug==0.16.0
