--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ Flask==1.1.1
 Flask-JWT==0.3.2
 Flask-RESTful==0.3.7
 Flask-SQLAlchemy==2.4.1
+lazr.restfulclient==0.13.5
+lazr.uri==1.0.3
+psycopg2-binary==2.8.3
 SQLAlchemy==1.3.10
 uWSGI==2.0.18
-
